syntax = "proto3";
package rollapp.dividends;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dividends/gauge.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/dividends/types";

// Query defines the gRPC querier service
service Query {
  rpc GaugeByID(GaugeByIDRequest) returns (GaugeByIDResponse) {
    option (google.api.http).get = "/rollapp/dividends/gauge_by_id/{id}";
  }

  rpc Gauges(GaugesRequest) returns (GaugesResponse) {
    option (google.api.http).get = "/rollapp/dividends/gauges";
  }

  rpc Params(ParamsRequest) returns (ParamsResponse) {
    option (google.api.http).get = "/rollapp/dividends/params";
  }
}

message GaugeByIDRequest {
  uint64 id = 1;
}

message GaugeByIDResponse {
  Gauge gauge = 1 [ (gogoproto.nullable) = false ];
}

message GaugesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message GaugesResponse {
  repeated Gauge data = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message ParamsRequest {}

message ParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}